--- a/app/templates/template2.html
+++ b/app/templates/template2.html
@@ -11,23 +11,11 @@
     <script>
     function initialize() {
         var mapProp = {
-            center:new google.maps.LatLng(39.952,-75.195),
-            zoom:17,
+            center:new google.maps.LatLng(51.508742,-0.120850),
+            zoom:5,
             mapTypeId:google.maps.MapTypeId.ROADMAP
     };
         var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-        var treasures = {{ treasures|safe }}
-        for (i = 0; i < treasures.length; i = i + 3)
-        {
-            var marker = new google.maps.Marker({
-            position:{lat: treasures[3*i], lng: treasures[3*i+1]}, title: treasures[3*i+2]
-            });
-            marker.setMap(map);
-            marker.addListener('click', function() {
-                window.alert(this.title);
-            });
-        }
-
     }
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
@@ -38,6 +26,38 @@
 	  <p>MAP</p>
 	</div>
 	<!-- <script src="ControlMap.js"> -->
-	<div id="googleMap" style="width:500px;height:380px;"></div>
-  </body>
+	<div id="googleMap"></div>
+    <script type="text/javascript">
+        /*$(document).ready(function(){
+         map = new GMaps({
+         //div: '#map',
+         el: '#basic-map',
+         lat: 39.95,
+         lng: 75.19,
+         zoom: 12
+         });
+         var treasures = {{ treasures|safe }}
+         for (i = 0; i < treasures.length; i = i + 3)
+         {
+         window.alert(treasures[3*i])
+         map.addMarker({
+         lat: treasures[3*i],
+         lng: treasures[3*i+1],
+         title: treasures[3*i+2],
+         click: function(e) {
+         alert("Latitude: " + lat.toString() + "\nLongitude: " + lng.toString() + "\nTitle: " + title.toString())
+         }
+         });
+         }
+         })
+    var map;
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat: 39.95, lng: 75.19},
+        zoom: 8
+        });
+    }*/
+    </script>
+
+	</body>
 </html>
